@@ -31,8 +31,9 @@ set auto_index(tclLdAout) [list source [file join $dir ldAout.tcl]]
 set auto_index(pkg_compareExtension) [list source [file join $dir package.tcl]]
 set auto_index(pkg_mkIndex) [list source [file join $dir package.tcl]]
 set auto_index(tclPkgSetup) [list source [file join $dir package.tcl]]
-set auto_index(tclMacPkgSearch) [list source [file join $dir package.tcl]]
 set auto_index(tclPkgUnknown) [list source [file join $dir package.tcl]]
+set auto_index(::tcl::MacOSXPkgUnknown) [list source [file join $dir package.tcl]]
+set auto_index(::tcl::MacPkgUnknown) [list source [file join $dir package.tcl]]
 set auto_index(::pkg::create) [list source [file join $dir package.tcl]]
 set auto_index(parray) [list source [file join $dir parray.tcl]]
 set auto_index(::safe::InterpStatics) [list source [file join $dir safe.tcl]]
